2.2 查看运行时参数